# DatingBot

./: .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  babel.cfg  black.toml  bot.conf  django_app.py  docker-comose.yml  docker-compose.yml  justfile  lang_instruction.md  loader.py  pyproject.toml  requirements.txt  technical_task.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  smth-else.md
.github/workflows/: codeql-analysis.yml
data/: config.py  subs.py
django_project/django_project/: asgi.py  settings.py  urls.py  wsgi.py
django_project/telegrambot/: apps.py  manage.py  models.py
docs/: DEVELOPMENT.md
filters/: FiltersChat.py  IsAdminFilter.py  __init__.py  filters_chat.py  is_admin_filter.py
functions/: app_scheduler.py  auxiliary_tools.py  create_forms_funcs.py  get_data_filters_func.py  get_data_func.py  get_next_user_func.py  get_user_location.py  meetings_funcs.py  select_all_users_func.py  send_form_func.py  templates_messages.py  user_list_func.py
functions/dating/: __init__.py  create_forms_funcs.py  get_data_filters_func.py  get_next_user_func.py  get_user_location.py  reaction_strategies.py  send_form_func.py
functions/event/: extra_features.py  templates_messages.py
functions/main_app/: app_scheduler.py  auxiliary_tools.py  determin_location.py  get_data_func.py  language_ware.py
handlers/: __init__.py  echo_handler.py  ucasse_buy.py
handlers/admin/: __init__.py  admin_handler.py
handlers/admins/: __init__.py  monitoring.py
handlers/errors/: __init__.py  error_handler.py
handlers/groups/: __init__.py  event_moderate.py  start.py
handlers/users/: Qiwi_buy.py  __init__.py  admin.py  admin_handler.py  admin_handlers.py  (+54 more)
keyboards/: __init__.py
middlewares/: AgentSupport.py  BanCheck.py  IsMaintenanceCheck.py  LinkCheck.py  Log.py  SchedulerWare.py  Throttling.py  __init__.py  agent_support.py  ban_check.py  check_ban_middleware.py  is_maintenance_check.py  language_middleware.py  language_ware.py  throttling.py
states/: Mailing.py  Reports.py  admins.py  ban_user_states.py  find_user.py  mailing.py  new_data_state.py  reg_state.py  reports.py  view_p.py
utils/: __init__.py  faker.py  logger.py  notify_admins.py  set_bot_commands.py  statistics.py
(+127 files in other folders)
